@@ -3,7 +3,7 @@
     <parent>
         <groupId>fr.ufrst.m1info.pvm.group5</groupId>
         <artifactId>group5</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>2.0-pre</version>
     </parent>
 
     <artifactId>ast</artifactId>
@@ -28,24 +28,13 @@
                         <goals>
                             <goal>antlr4</goal>
                         </goals>
+                        <phase>generate-sources</phase>
                     </execution>
                 </executions>
             </plugin>
-            <!-- Plugin so we can use Mockito with Java 22 without errors -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <argLine>
-                        --add-opens fr.ufrst.m1info.pvm.group5.ast/fr.ufrst.m1info.pvm.group5.ast.Nodes=ALL-UNNAMED
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
+
 
     <dependencies>
         <dependency>
@@ -56,7 +45,7 @@
         <dependency>
             <groupId>fr.ufrst.m1info.pvm.group5</groupId>
             <artifactId>memory</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>2.0-pre</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
